--- a/PPMFullStackTool/src/main/resources/application.properties
+++ b/PPMFullStackTool/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.password=password
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
 
